sample-api/rolling-update-no-istio/sample-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  namespace: api  
  labels:
    app: sample-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:      
      labels:
        app: sample-api
    spec:
      containers:
        - name: sample-api
          image: junhanosc/sample-api
          ports:
          - name: http
            containerPort: 8080
